--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,6 @@
-<div>
-
-</div>
+<center> <img src="./images/beer.png" alt="beer" /> <br> <br>
+    
+        <a href="/beers"> Check the Beers!</a> <br> <br>
+        <a href="/random-beer"> Check a random Beer!</a>
+        
+    </center>
